--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h3 data-aos="fade-down" data-aos-duration="1500" >About</h3>
                 <div style="margin-top: 70px;"class="row">
                     <div data-aos="fade-right" data-aos-duration="1500" class="col-sm-6">
-                        <p>因為近聊天直播的ＡＰP越來越多，而且我個人又樂愛運動健身等，後來就聯想到極限運動結合直播，讓大家能感受極限運動的熱血及刺激。</p>
+                        <p>因為近聊天直播的App越來越多，而且我個人又樂愛運動健身等，後來就聯想到極限運動結合直播，讓大家能感受極限運動的熱血及刺激。</p>
                     </div>
                     <div data-aos="fade-left" data-aos-duration="1500"class="col-sm-6">
                         <img src="img/sport-top.jpeg">
@@ -155,7 +155,7 @@
                 <div style="position: relative;"class="container v-1">
                 <div data-aos="fade-down" data-aos-duration="1500" style="width: 400px;margin-top: -150px;margin-bottom: 250px;position: absolute;right: 0;"class="text-box">
                 <div style="color: #fff;font-size: 38px;font-weight: 700;"class="text">動態頁面</div>
-                <div style="color: #fff;font-size: 25px;font-weight: 500;margin-top: 30px; "class="subtitle">可以看到關注直撥主的最新消息</div>
+                <div style="color: #fff;font-size: 25px;font-weight: 500;margin-top: 30px; "class="subtitle">可以看到關注直播主的最新消息</div>
                 </div>
                 
             <div class="row">
@@ -196,7 +196,7 @@
                 <div class="col-sm-6 dd" data-aos="fade-right" data-aos-duration="2500">
                     
                     <h4>直播頁面</h4>
-                        <p>觀看到直撥主現場最新的運動表演狀況</p>
+                        <p>觀看到直播主現場最新的運動表演狀況</p>
                 </div>
                 <div class="col-sm-6" data-aos="fade-left" data-aos-duration="2500">
                     <img src="img/0421-9.png">
